# wemove

./: .env  .gitignore  Cargo.toml  README.md  config.toml  opencode_ses.txt
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  tracing.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth_proxy.rs  error.rs  handlers.rs  main.rs  middleware.rs  openapi.rs  routes.rs  state.rs
docs/: SPEC.md  openapi_plan.md
openapi/: openapi.json
tests/: integration_tests.rs
web/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json
web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
web/src/app/main/: main.component.css  main.component.html  main.component.ts
