[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/config",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WeMove Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
anyhow = "1.0"
thiserror = "2.0"
axum-prometheus = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

[profile.release]
lto = true
codegen-units = 1