[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/config",
    "crates/server",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WeMove Team"]
license = "MIT"

[workspace.dependencies]
marvels_auth = { path = "../marvels/marvels_server", package = "marvels_server" }
proto = { path = "../marvels/proto" }
anyhow = "1.0"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
metrics = { version = "0.24", default-features = true }
metrics-exporter-prometheus = { version = "0.18", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

[profile.release]
lto = true
codegen-units = 1
